--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad47162",
+   "id": "9f8c2f4e",
    "metadata": {},
    "source": [
     "# google colabへのリンク"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b398ff",
+   "id": "17016cec",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/chemoinformatics-lecture/lecture-beginner/blob/main/lesson01_install/lecture_note1.ipynb)"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4532b2c",
+   "id": "8e697baa",
    "metadata": {},
    "source": [
     "# ライブラリーのインストール"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6368e5aa",
+   "id": "f024788f",
    "metadata": {},
    "source": [
     "先頭に!をつけて行う。"
@@ -44,29 +44,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7475b6f8",
+   "id": "67c6f758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-    "!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
-    "!bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local"
+    "%%bash\n",
+    "\n",
+    "MINICONDA_INSTALLER_SCRIPT=Miniconda3-4.5.4-Linux-x86_64.sh\n",
+    "MINICONDA_PREFIX=/usr/local\n",
+    "wget https://repo.continuum.io/miniconda/$MINICONDA_INSTALLER_SCRIPT\n",
+    "chmod +x $MINICONDA_INSTALLER_SCRIPT\n",
+    "./$MINICONDA_INSTALLER_SCRIPT -b -f -p $MINICONDA_PREFIX\n",
+    "conda install --channel defaults conda python=3.6 --yes\n",
+    "conda update --channel defaults --all --yes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fdfe939",
+   "id": "946872b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c conda-forge rdkit"
+    "import sys\n",
+    "_ = (sys.path\n",
+    "        .append(\"/usr/local/lib/python3.6/site-packages\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1a6316",
+   "id": "5144e0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c rdkit rdkit --yes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac41fe35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b66837d",
+   "id": "4708368c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a6623dd",
+   "id": "3e4bd6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c38609f",
+   "id": "6411053b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b4d9c3",
+   "id": "67660a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6366bd7",
+   "id": "911f5dec",
    "metadata": {},
    "source": [
     "# ファイルのアップロード"
@@ -133,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92bdfbd9",
+   "id": "e648dc68",
    "metadata": {},
    "source": [
     "# ファイルのダウンロード"
@@ -142,14 +160,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65876c82",
+   "id": "a24370a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5f4220c6",
+   "id": "c6f6f844",
    "metadata": {},
    "source": [
     "# google driveへの保存方法"
@@ -158,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99b87d7d",
+   "id": "7ff7186c",
    "metadata": {},
    "outputs": [],
    "source": []
