--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45a9e26f",
-   "metadata": {},
-   "source": [
-    "Jupyter 知っておくと少し便利なTIPS集\n",
-    "https://qiita.com/simonritchie/items/d7dccb798f0b9c8b1ec5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9f8c2f4e",
    "metadata": {},
    "source": [
@@ -27,18 +18,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e697baa",
+   "id": "c931ee16",
    "metadata": {},
    "source": [
-    "# ライブラリーのインストール"
+    "# google colabolatoryの使い方"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d5da117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello Python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e19658a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1+1 "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f024788f",
+   "id": "38d56e2f",
    "metadata": {},
    "source": [
-    "先頭に!をつけて行う。"
+    "# 事前に入っているライブラリー"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7018cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "235e237b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib, pandas, seaborn, plotly, sklearn, numpyなどなどが事前に入っている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b87eb48",
+   "metadata": {},
+   "source": [
+    "参考web\n",
+    "https://blog.masahiko.info/entry/2020/03/14/160151"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0afdeee",
+   "metadata": {},
+   "source": [
+    "# google colabolatoryの注意点\n",
+    "90分ほど操作しない状態が続く場合、仮想マシンは停止し、ダウンロードしたデータやライブラリは初期化される仕様なので注意が必要"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e697baa",
+   "metadata": {},
+   "source": [
+    "# mini condaのインストールと環境設定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2f59cfc",
+   "metadata": {},
+   "source": [
+    "https://repo.anaconda.com/miniconda/\n",
+    "ここの中にあるファイルを指定できる。"
    ]
   },
   {
@@ -50,12 +116,12 @@
    "source": [
     "%%bash\n",
     "\n",
-    "MINICONDA_INSTALLER_SCRIPT=Miniconda3-4.5.4-Linux-x86_64.sh\n",
+    "MINICONDA_INSTALLER_SCRIPT=Miniconda3-latest-Linux-x86_64.sh\n",
     "MINICONDA_PREFIX=/usr/local\n",
     "wget https://repo.continuum.io/miniconda/$MINICONDA_INSTALLER_SCRIPT\n",
     "chmod +x $MINICONDA_INSTALLER_SCRIPT\n",
     "./$MINICONDA_INSTALLER_SCRIPT -b -f -p $MINICONDA_PREFIX\n",
-    "conda install --channel defaults conda python=3.6 --yes\n",
+    "conda install --channel defaults conda python=3.8 --yes\n",
     "conda update --channel defaults --all --yes"
    ]
   },
@@ -68,7 +134,23 @@
    "source": [
     "import sys\n",
     "_ = (sys.path\n",
-    "        .append(\"/usr/local/lib/python3.6/site-packages\"))"
+    "        .append(\"/usr/local/lib/python3.8/site-packages\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e999132",
+   "metadata": {},
+   "source": [
+    "## ライブラリーにインストール"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f024788f",
+   "metadata": {},
+   "source": [
+    "先頭に!をつけて行う。"
    ]
   },
   {
@@ -88,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rdkit import Chem"
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw"
    ]
   },
   {
@@ -98,8 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Chem.MolFromSmiles('Cc1ccccc1')\n",
-    "m"
+    "mol = Chem.MolFromSmiles('Cc1ccccc1')\n",
+    "Draw.MolToImage(mol, size=(100,100))"
    ]
   },
   {
