--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -115,13 +115,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
-    "MINICONDA_INSTALLER_SCRIPT=Miniconda3-latest-Linux-x86_64.sh\n",
-    "MINICONDA_PREFIX=/usr/local\n",
-    "wget https://repo.continuum.io/miniconda/$MINICONDA_INSTALLER_SCRIPT\n",
-    "chmod +x $MINICONDA_INSTALLER_SCRIPT\n",
-    "./$MINICONDA_INSTALLER_SCRIPT -b -f -p $MINICONDA_PREFIX\n",
-    "conda install --channel defaults conda python=3.8 --yes\n",
+    "wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+    "chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
+    "bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
     "conda update --channel defaults --all --yes"
    ]
   },
@@ -134,7 +130,7 @@
    "source": [
     "import sys\n",
     "_ = (sys.path\n",
-    "        .append(\"/usr/local/lib/python3.8/site-packages\"))"
+    "        .append(\"/usr/local/lib/python3.7/site-packages\"))"
    ]
   },
   {
@@ -156,11 +152,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5144e0e9",
+   "id": "654e8343",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c rdkit rdkit --yes "
+    "!conda install -c conda-forge rdkit"
    ]
   },
   {
@@ -192,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c mcs07 pubchempy"
+    "!conda install -c bioconda pubchempy"
    ]
   },
   {
@@ -221,7 +217,7 @@
    "id": "911f5dec",
    "metadata": {},
    "source": [
-    "# ファイルのアップロード"
+    "# ファイルのアップロードとダウンロード"
    ]
   },
   {
@@ -230,23 +226,20 @@
    "id": "c285085a",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e648dc68",
-   "metadata": {},
    "source": [
-    "# ファイルのダウンロード"
+    "from google.colab import files\n",
+    "files.upload()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a24370a6",
+   "cell_type": "markdown",
+   "id": "247c5670",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "手動でも可能\n",
+    "\n",
+    "https://blog.kikagaku.co.jp/google-colab-file"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,6 +253,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ff7186c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af51c22",
+   "metadata": {},
+   "source": [
+    "【Google Colaboratory】Google ドライブにマウントし、ファイルへアクセスする方法\n",
+    "\n",
+    "https://blog.kikagaku.co.jp/google-colab-drive-mount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e349191a",
    "metadata": {},
    "outputs": [],
    "source": []
