--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -2,6 +2,73 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3540b483",
+   "metadata": {},
+   "source": [
+    "# googleアカウントの作成とchromeのダウンロードを行う"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30d32852",
+   "metadata": {},
+   "source": [
+    "googleのアカウントがあれば、google colabolatoryを無料で使用できる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af98470",
+   "metadata": {},
+   "source": [
+    "googleアカウントは、複数持っていても大丈夫\n",
+    "勉強用に設定（パスワードを忘れないように注意）\n",
+    "\n",
+    "https://allabout.co.jp/gm/gc/474435/\n",
+    "   \n",
+    "chromeならば、アカウントの切り替えや同時使用も楽\n",
+    "\n",
+    "https://www.pc-koubou.jp/magazine/36073"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2dd04d",
+   "metadata": {},
+   "source": [
+    "## google colabolatoryのメリット"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "918a073a",
+   "metadata": {},
+   "source": [
+    "1. 手軽で簡単\n",
+    "2. 無料\n",
+    "3. 高性能GPUが使える\n",
+    "4. 共有が楽"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ecefc0",
+   "metadata": {},
+   "source": [
+    "## google colabolatoryのデメリット"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c469bcbb",
+   "metadata": {},
+   "source": [
+    "　1. 90分ルール(セッション切断から90分経過でリセット実行)\n",
+    "　2. 12時間ルール(ノートブック起動から12時間経過でリセット実行)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f8c2f4e",
    "metadata": {},
    "source": [
@@ -82,55 +149,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e8e2e19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cafd481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    '名前' :['田中', '山田', '高橋'],\n",
+    "    '役割' : ['営業部長', '広報部', '技術責任者'],\n",
+    "    '身長' : [178, 173, 169]\n",
+    "    })\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d41e5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "google colabolatoryが使用しているOSやpythonのversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc5ee95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import platform\n",
+    "# 使用しているOSを表示\n",
+    "platform.platform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1721693b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python version"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e0afdeee",
    "metadata": {},
    "source": [
     "# google colabolatoryの注意点\n",
     "90分ほど操作しない状態が続く場合、仮想マシンは停止し、ダウンロードしたデータやライブラリは初期化される仕様なので注意が必要"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e697baa",
-   "metadata": {},
-   "source": [
-    "# mini condaのインストールと環境設定"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2f59cfc",
-   "metadata": {},
-   "source": [
-    "https://repo.anaconda.com/miniconda/\n",
-    "ここの中にあるファイルを指定できる。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67c6f758",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-    "chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
-    "bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
-    "conda update --channel defaults --all --yes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "946872b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "_ = (sys.path\n",
-    "        .append(\"/usr/local/lib/python3.7/site-packages\"))"
    ]
   },
   {
@@ -156,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c conda-forge rdkit"
+    "!pip install rdkit"
    ]
   },
   {
@@ -188,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c bioconda pubchempy"
+    "!pip install pubchempy"
    ]
   },
   {
@@ -271,12 +353,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c0ba6fc",
+   "metadata": {},
+   "source": [
+    "Google Colab/Drive に pip インストール: これなら消えない\n",
+    "\n",
+    "https://ggcs.io/2020/06/22/google-colab-pip-install/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e349191a",
+   "id": "4c1bb79a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d288261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/content/drive/MyDrive/data/output.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e697baa",
+   "metadata": {},
+   "source": [
+    "# mini condaのインストールと環境設定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271cee6a",
+   "metadata": {},
+   "source": [
+    "pip が使えなくて、condaでインストールする必要がある時には、以下のように行う。\n",
+    "\n",
+    "ColaboratoryでRDKit (2021.2.26版)\n",
+    "\n",
+    "https://qiita.com/tonets/items/0d991dd16911a689e1ee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67c6f758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+    "chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
+    "bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
+    "conda update --channel defaults --all --yes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2f59cfc",
+   "metadata": {},
+   "source": [
+    "https://repo.anaconda.com/miniconda/\n",
+    "ここの中にあるファイルを指定できる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "946872b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "_ = (sys.path.append(\"/usr/local/lib/python3.7/site-packages\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a5c3e60",
+   "metadata": {},
+   "source": [
+    "あとは、!conda installでライブラリーをインストールすればよい。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d5334a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c conda-forge rdkit"
+   ]
   }
  ],
  "metadata": {
