--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -2,15 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3540b483",
-   "metadata": {},
+   "id": "9decedee",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# google colabolatoryでプログラムの実行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a475da73",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# googleアカウントの作成とchromeのダウンロードを行う"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "30d32852",
+   "id": "edbfc44d",
    "metadata": {},
    "source": [
     "googleのアカウントがあれば、google colabolatoryを無料で使用できる。"
@@ -18,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af98470",
+   "id": "f6c59b9f",
    "metadata": {},
    "source": [
     "googleアカウントは、複数持っていても大丈夫\n",
@@ -33,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2dd04d",
+   "id": "f3f02d59",
    "metadata": {},
    "source": [
     "## google colabolatoryのメリット"
@@ -41,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918a073a",
+   "id": "0ef154d7",
    "metadata": {},
    "source": [
     "1. 手軽で簡単\n",
@@ -52,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ecefc0",
+   "id": "fcc2727d",
    "metadata": {},
    "source": [
     "## google colabolatoryのデメリット"
@@ -60,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c469bcbb",
+   "id": "3aadee1b",
    "metadata": {},
    "source": [
     "　1. 90分ルール(セッション切断から90分経過でリセット実行)\n",
@@ -77,10 +93,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0eb703ea",
+   "metadata": {},
+   "source": [
+    "githubリポジトリ内のjupyter notebookを開き、開いたURLの\n",
+    "”https://github.com”\n",
+    "を\n",
+    "”https://colab.research.google.com/github”\n",
+    "に変換してアクセスすると、google colabolatoryで開くことができる。\n",
+    "\n",
+    "\"https://github.com/chemoinformatics-lecture/lecture-beginner/blob/main/lesson01_install/lecture_note1.ipynb\"\n",
+    "だったら、\n",
+    "\"https://colab.research.google.com/github/chemoinformatics-lecture/lecture-beginner/blob/main/lesson01_install/lecture_note1.ipynb”\n",
+    "になる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17016cec",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/chemoinformatics-lecture/lecture-beginner/blob/main/lesson01_install/lecture_note1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "031c7302",
+   "metadata": {},
+   "source": [
+    "↑ colabで開くようなリンクも作成することができる。\n",
+    "\n",
+    "https://rcmdnk.com/blog/2019/05/24/computer-github-python/\n",
+    "\n",
+    "ブックマークレットも便利"
    ]
   },
   {
@@ -136,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matplotlib, pandas, seaborn, plotly, sklearn, numpyなどなどが事前に入っている。"
+    "matplotlib, pandas, numpy, sklearnなどが事前に入っている。"
    ]
   },
   {
@@ -151,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8e2e19",
+   "id": "1e2d5cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cafd481",
+   "id": "9f147541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d41e5ae",
+   "id": "9ec54197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,23 +232,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc5ee95",
+   "id": "ddbeff31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c0dafc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import platform\n",
     "# 使用しているOSを表示\n",
     "platform.platform()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1721693b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python version"
    ]
   },
   {
@@ -354,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0ba6fc",
+   "id": "1ab30d93",
    "metadata": {},
    "source": [
     "Google Colab/Drive に pip インストール: これなら消えない\n",
@@ -365,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1bb79a",
+   "id": "6e702b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d288261",
+   "id": "5f6c8bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "271cee6a",
+   "id": "e4d91f67",
    "metadata": {},
    "source": [
     "pip が使えなくて、condaでインストールする必要がある時には、以下のように行う。\n",
@@ -439,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a5c3e60",
+   "id": "836ff229",
    "metadata": {},
    "source": [
     "あとは、!conda installでライブラリーをインストールすればよい。"
@@ -448,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d5334a",
+   "id": "6de94fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +502,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
