--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -175,11 +175,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "235e237b",
+   "cell_type": "markdown",
+   "id": "3bb48ac2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "matplotlib, pandas, numpy, sklearnなどが事前に入っている。"
    ]
@@ -220,11 +218,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "956cd198",
+   "cell_type": "markdown",
+   "id": "785ac7c5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "google colabolatoryが使用しているOSやpythonのversion"
    ]
@@ -236,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python version"
+    "!python -V"
    ]
   },
   {
