Colaboratory を使用して作成しました

--- a/lesson01_install/【01】google colaboratoryの使い方.ipynb
+++ b/lesson01_install/【01】google colaboratoryの使い方.ipynb
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "2d5da117",
       "metadata": {
         "id": "2d5da117",
@@ -204,7 +204,7 @@
       "id": "7ff7186c",
       "metadata": {
         "id": "7ff7186c",
-        "outputId": "3c576829-8a49-4cf7-89c8-ae74003b52f7",
+        "outputId": "e0a54b64-9e36-45ee-a3cd-8f51589941f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -214,7 +214,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -256,7 +256,6 @@
       "version": "3.8.13"
     },
     "colab": {
-      "name": "lecture_note1.ipynb のコピー",
       "provenance": [],
       "include_colab_link": true
     }
