--- a/lesson01_install/【02】プリントやコメントの書き方.ipynb
+++ b/lesson01_install/【02】プリントやコメントの書き方.ipynb
@@ -21,15 +21,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## print文"
+      ],
+      "metadata": {
+        "id": "wfT5yP2Fp7QP"
+      },
+      "id": "wfT5yP2Fp7QP"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "e88feca4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e88feca4",
-        "outputId": "dc889eb9-90ac-437b-eb37-29645f5cc635"
+        "outputId": "e98ff587-6ad5-44cb-9724-e87526598ae4"
       },
       "outputs": [
         {
@@ -45,39 +55,91 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## プリント文無しでも最終行はプリントされる"
+      ],
+      "metadata": {
+        "id": "7LotMhdFqHHT"
+      },
+      "id": "7LotMhdFqHHT"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "9ecbe704",
       "metadata": {
-        "id": "9ecbe704"
+        "id": "9ecbe704",
+        "outputId": "4c95a708-27ea-41d4-e99b-f86220c50c5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
-        "a = 5"
+        "a = 5\n",
+        "a"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "f5eb8764",
       "metadata": {
-        "id": "f5eb8764"
+        "id": "f5eb8764",
+        "outputId": "f14608c7-5037-4225-b74b-28044966fb76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
       "source": [
-        "b = 4"
+        "b = 4\n",
+        "a + b"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 途中結果を表示したければ、間でprint文を入れる。"
+      ],
+      "metadata": {
+        "id": "y0vcomb2qZR0"
+      },
+      "id": "y0vcomb2qZR0"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "1b509a7f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1b509a7f",
-        "outputId": "9514c83d-db89-4039-94ea-5ea10a1c35ac"
+        "outputId": "85d14588-5fb8-464b-a622-dad702ce4066"
       },
       "outputs": [
         {
@@ -103,16 +165,75 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## コメントアウトのやり方"
+      ],
+      "metadata": {
+        "id": "y2HVgrPpqlnN"
+      },
+      "id": "y2HVgrPpqlnN"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1行のコメントアウト"
+      ],
+      "metadata": {
+        "id": "jkyFREsrrH7w"
+      },
+      "id": "jkyFREsrrH7w"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "a508bc05",
+      "execution_count": 5,
+      "id": "789a72a7",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "a508bc05",
-        "outputId": "0640e778-7b19-459b-9bf9-7854c2ee90f3"
+        "id": "789a72a7",
+        "outputId": "14c1ced1-f026-4f51-d205-cd9a7c2d16a2"
       },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a+bの結果は\n",
+            "9\n"
+          ]
+        }
+      ],
+      "source": [
+        "# print(\"aは\") ← 先頭に#をつけるとprintされなくなります。\n",
+        "# print(a)\n",
+        "# print(\"bは\")\n",
+        "# print(b)\n",
+        "print(\"a+bの結果は\")\n",
+        "print(a + b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 行の途中からコメントをすることもできる。\n",
+        "print(\"aは\") \n",
+        "print(a) #a=5が代入されている。\n",
+        "print(\"bは\")\n",
+        "print(b) #b=4が代入されている。\n",
+        "print(\"a+bの結果は\")\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "xXsg1N9frklo",
+        "outputId": "be3a7d7b-174c-403c-99e5-e9bae1771384",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "xXsg1N9frklo",
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,72 +243,67 @@
             "5\n",
             "bは\n",
             "4\n",
-            "a * bの結果は\n",
-            "20\n"
+            "a+bの結果は\n",
+            "9\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
+        "### 複数行のコメントアウト"
+      ],
+      "metadata": {
+        "id": "EpkE_etnrMBu"
+      },
+      "id": "EpkE_etnrMBu"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "先頭に\"を3つつなげてコメントアウトするところ指定することもできる。\n",
+        "<br>\n",
+        "\"\"\"<br>\n",
+        "コメントアウトするところ<br>\n",
+        "<br>\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "X4pT7oG7sCBq"
+      },
+      "id": "X4pT7oG7sCBq"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
         "print(\"aは\")\n",
         "print(a)\n",
         "print(\"bは\")\n",
         "print(b)\n",
-        "print(\"a * bの結果は\")\n",
-        "print(a * b)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "789a72a7",
+        "\"\"\"\n",
+        "print(\"a+bの結果は\")\n",
+        "print(a + b)"
+      ],
       "metadata": {
+        "id": "KZMQ0mCDq3ii",
+        "outputId": "1d976a0b-586e-4810-f832-28677a06f676",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "789a72a7",
-        "outputId": "4226def4-6b9a-4fb3-efdc-880aab1677c7"
+        }
       },
+      "id": "KZMQ0mCDq3ii",
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.25"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a+bの結果は\n",
+            "9\n"
+          ]
         }
-      ],
-      "source": [
-        "a / b"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "b38702dc",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b38702dc",
-        "outputId": "6d11a695-0b86-48c5-b080-08ed40e6dd6d"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ],
-      "source": [
-        "a // b"
       ]
     }
   ],
